# ship

./: .gitignore  Cargo.toml  LICENSE  todo.md
src/: fs_api.rs  macros.rs  main.rs  prompt.rs  texts.rs  vcs.rs
src/app/: build.rs  clean.rs  dependency_installer.rs  init.rs  mod.rs  new.rs
src/compiler/: mod.rs
src/config/: dependencies.rs  fingerprint.rs  lock.rs  metadata.rs  mod.rs  package.rs
src/consts/: env.rs  env_var.rs  event.rs  mod.rs  msg.rs  path.rs  paths.rs  pattern.rs  source_code.rs  url.rs
src/fs_api/: cwd_mgr.rs
