[package]
name = "ship"
version = "0.1.0"
edition = "2021"


[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1


[dependencies]
clap = "4.4.10"
git2 = "0.18.1"
regex = "1.10.2"
serde_json = "1.0.108"
clap-verbosity-flag = "2.1.0"
tokio = { version = "1.35.0", features = [ "full" ] } # ["fs", "rt", "process", "macros", "rt-multi-thread"] }
serde = { version = "1.0.193", features = ["derive"] }
libc = { version = "0.2.155", features = ["const-extern-fn", "extra_traits"] }
gccjit = { version = "2.0.0", features = ["master"] }
toml = "0.8.13"
tar = "0.4.40"
toml_edit = { version = "0.22.13", features = ["serde"] }
tempfile = "3.10.1"
thiserror = "1.0.61"
tracing = { version = "0.1.40", features = ["async-await", "log"] }
tracing-chrome = "0.7.2"
tracing-subscriber = { version = "0.3.18", features = ["chrono", "json", "regex", "serde", "serde_json", "time", "tracing", "tracing-serde", "env-filter"] }
time = { version = "0.3.36", features = ["formatting", "parsing", "quickcheck", "rand", "serde", "serde-human-readable"] }
url = { version = "2.5.0", features = ["serde"] }
walkdir = "2.5.0"
shell-escape = "0.1.5"
serde-untagged = "0.1.6"
serde-value = "0.7.0"
serde_ignored = "0.1.10"
semver = { version = "1.0.23", features = ["serde"] }
security-framework = { version = "2.11.0", features = ["log"] }
same-file = "1.0.6"
rand = { version = "0.8.5", features = ["serde", "log"] }
pkg-config = "0.3.30"
pulldown-cmark = { version = "0.11.0", features = ["serde"] }
percent-encoding = "2.3.1"
pathdiff = "0.2.1"
pasetors = { version = "0.6.8", features = ["v3", "paserk", "serde"] }
os_info = "3.8.2"
openssl = "0.10.64"
openssl-sys = "0.9.102"
opener = "0.7.1"
miow = "0.6.0"
memchr = "2.7.2"
libloading = "0.8.3"
libgit2-sys = "0.16.2"
lazycell = { version = "1.3.0", features = ["serde"] }
jobserver = "0.1.31"
itertools = "0.13.0"
indexmap = { version = "2.2.6", features = ["serde"] }
im-rc = { version = "15.1.0", features = ["serde"] }
http-auth = { version = "0.1.9", features = ["log"] }
humantime = "2.1.0"
home = "0.5.9"
hmac = { version = "0.12.1", features = ["std"] }
hex = "0.4.3"
handlebars = { version = "5.1.2", features = ["walkdir", "dir_source"] }
glob = "0.3.1"
gix = { version = "0.63.0", default-features = false, features = ["blocking-http-transport-curl", "progress-tree", "revision", "parallel", "dirwalk"] }
git2-curl = "0.19.0"
flate2 = "1.0.30"
filetime = "0.2.23"
curl-sys = "0.4.72"
curl = "0.4.46"
criterion = { version = "0.5.1", features = ["tokio", "async_tokio", "futures"] }
color-print = "0.3.6"
byte-size = "0.2.7"
base64 = "0.22.1"
anyhow = "1.0.86"
anstyle = "1.0.7"
anstream = "0.6.14"
annotate-snippets = "0.11.2"
inquire = { version = "0.7.5", features = ["chrono", "console", "editor", "tempfile", "termion"] }
indicatif = { version = "0.17.8", features = ["futures", "tokio", "in_memory"] }
futures = { version = "0.3.31", features = ["io-compat"] }


